# lolama

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
lolama/: __init__.py  cli.py
lolama/data/: __init__.py  loader.py  registry.py  vlm_loader.py
lolama/metal/: __init__.py  benchmark.py  metal_ext.cpp
lolama/model/: __init__.py  config.py  generation_config.py  generator.py  kv_cache.py  llama.py  llava.py  quantize.py  sampler.py  vlm_config.py
lolama/protocols/: __init__.py  model.py
lolama/utils/: __init__.py  device.py  logging.py  rope.py
lolama/vision/: __init__.py  clip.py  processor.py  projector.py
scripts/: download.py  generate.py  generate_batch.py  quantize_test.py
scripts/debug/: debug_compare.py  debug_layer.py
src/data/: __init__.py  loader.py
src/model/: __init__.py  config.py  kv_cache.py  layers.py  llama.py  quantize.py
tests/: conftest.py  test_clip.py  test_config.py  test_generation_config.py  test_kv_cache.py  test_layers.py  test_llava.py  test_model.py  test_rope.py  test_sampler.py
